cors_implementation_in_properties